--- a/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/docroot/WEB-INF/liferay-plugin-package.properties
@@ -1,10 +1,13 @@
-name=Taskmanager
-module-group-id=liferay
-module-incremental-version=1
+name=taskmanager-portlet
+module-group-id=com.pmc
+module-incremental-version=1.0.0
 tags=
 short-description=
 change-log=
-page-url=http://www.liferay.com
-author=Liferay, Inc.
+page-url=https://github.com/pmcabrales/taskmanager-portlet
+author=Pedro Mart\u00EDnez Cabrales
 licenses=LGPL
+portal-dependency-jars=\
+    jstl-api.jar,\
+    jstl-impl.jar
 liferay-versions=6.1.1
